Self Assessment Table multiline content float to right on mobile view Fix

--- a/DigitalLearningSolutions.Web/Styles/learningPortal/selfAssessmentOverview.scss
+++ b/DigitalLearningSolutions.Web/Styles/learningPortal/selfAssessmentOverview.scss
@@ -25,3 +25,14 @@
   border-width: 7px 0 7px 12.124px;
   border-left-color: inherit;
 }
+
+@media (max-width: 48.0525em){
+
+.nhsuk-table-responsive .nhsuk-table__body .nhsuk-table__row td {
+  padding-right: 0;
+  text-align:left;
+
+}
+}
+
+
